<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_light_color"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/aboveLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_radius_bottom"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp16"
                    android:src="@drawable/logo_temp" />

                <com.example.greenlightaquaticapp.utils.MSPTextViewBold
                    android:id="@+id/tvTitle"
                    style="@style/TextAppearance.Aquatic.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp16"
                    android:gravity="center"
                    android:text="@string/app_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/dp32"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/dp24">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.Aquatic.TextInputLayout"
                    android:id="@+id/til_email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp4"
                    android:hint="@string/email_id"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red_light_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_email_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_password_input"
                    style="@style/Widget.Aquatic.TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp4"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:errorTextColor="@color/red_light_color">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_gravity="end"
                    android:padding="@dimen/click_able_view_padding"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"/>


                <com.google.android.material.button.MaterialButton
                    android:layout_marginTop="@dimen/dp16"
                    android:id="@+id/btn_login"
                    style="@style/Widget.Aquatic.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:layout_marginBottom="@dimen/dp16"
                        android:text="@string/do_not_have_an_account" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp16"
                        android:layout_marginBottom="@dimen/dp16"
                        android:padding="@dimen/dp8"
                        android:text="@string/register"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </ScrollView>

</LinearLayout>
